Prevent eyebrow-nav line break in author

--- a/gsusa/app/src/main/theme/custom/scss/components/_header.scss
+++ b/gsusa/app/src/main/theme/custom/scss/components/_header.scss
@@ -124,6 +124,10 @@
                 .search-box {
                     margin-right: rem-calc(55);
                 }
+                .cq-placeholder-header_47eyebrow-nav {
+                    display: inline-block !important; /* Prevent eyebrow-nav line break in author */
+                    vertical-align: top;
+                }
             }
             .tab-bar {
                 .logo {
